--- a/.github/workflows/Windows 10 - RustDesk.yml
+++ b/.github/workflows/Windows 10 - RustDesk.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
-    timeout-minutes: 99999999999999999999999999999999999999999999999999999999999
+    timeout-minutes: 9999
     
     steps:
       - name: Downloading & Installing Essentials
@@ -19,3 +19,4 @@ jobs:
         run: cmd /c show.bat
 
       - name: Time Counter
+        run: python time.py
